# slicer-extension

./: LICENSE  README.md
UnetSegBrats/: CMakeLists.txt
UnetSegBrats/UnetSegBrats/: CMakeLists.txt  UnetSegBrats.py
UnetSegBrats/UnetSegBrats/Resources/UI/: UnetSegBrats.ui
